ast_parser/parser.out
Grammar:

Rule 0     S' -> code_block
Rule 1     code_block -> statement
Rule 2     code_block -> statement code_block
Rule 3     code_block -> code_block statement
Rule 4     statement -> COMMAND
Rule 5     statement -> expr COMMA  [precedence=left, level=2]
Rule 6     statement -> expr NEWLINE
Rule 7     statement -> expr SEMICOLON
Rule 8     statement -> NEWLINE
Rule 9     statement -> SEMICOLON
Rule 10    statement -> switch_block OTHERWISE NEWLINE code_block END SEMICOLON
Rule 11    statement -> switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
Rule 12    statement -> switch_block OTHERWISE NEWLINE code_block END NEWLINE
Rule 13    statement -> switch_block OTHERWISE SEMICOLON code_block END NEWLINE
Rule 14    statement -> switch_block END NEWLINE
Rule 15    statement -> TRY code_block CATCH statement code_block END NEWLINE
Rule 16    statement -> WHILE expr code_block END NEWLINE
Rule 17    statement -> WHILE statement code_block END NEWLINE
Rule 18    statement -> IF expr statement END SEMICOLON
Rule 19    statement -> IF expr statement END NEWLINE
Rule 20    statement -> IF expr statement END
Rule 21    statement -> IF statement statement END SEMICOLON
Rule 22    statement -> IF statement statement END NEWLINE
Rule 23    statement -> IF statement statement END
Rule 24    statement -> if_block END SEMICOLON
Rule 25    statement -> if_block END NEWLINE
Rule 26    statement -> if_block END
Rule 27    statement -> BREAK SEMICOLON
Rule 28    statement -> CONTINUE SEMICOLON
Rule 29    statement -> BREAK NEWLINE
Rule 30    statement -> CONTINUE NEWLINE
Rule 31    statement -> FOR statement code_block END SEMICOLON
Rule 32    statement -> FOR statement code_block END NEWLINE
Rule 33    statement -> RETURN expr SEMICOLON
Rule 34    statement -> RETURN expr NEWLINE
Rule 35    statement -> FUNCTION statement code_block
Rule 36    statement -> FUNCTION statement code_block END NEWLINE
Rule 37    if_block -> IF expr code_block
Rule 38    if_block -> IF statement code_block
Rule 39    if_block -> if_block ELSEIF expr code_block
Rule 40    if_block -> if_block ELSEIF statement code_block
Rule 41    if_block -> if_block ELSE SEMICOLON code_block
Rule 42    if_block -> if_block ELSE NEWLINE code_block
Rule 43    switch_block -> SWITCH expr CASE expr code_block
Rule 44    switch_block -> SWITCH expr CASE statement code_block
Rule 45    switch_block -> SWITCH statement CASE expr code_block
Rule 46    switch_block -> SWITCH statement CASE statement code_block
Rule 47    switch_block -> switch_block CASE expr code_block
Rule 48    switch_block -> switch_block CASE statement code_block
Rule 49    expr -> STRING
Rule 50    expr -> NUMBER
Rule 51    expr -> NAME
Rule 52    expr -> expr CTRANSPOSE  [precedence=left, level=12]
Rule 53    expr -> expr TRANSPOSE  [precedence=left, level=12]
Rule 54    expr -> expr MPOWER expr  [precedence=left, level=12]
Rule 55    expr -> expr POWER expr  [precedence=left, level=12]
Rule 56    expr -> expr LDIVIDE expr  [precedence=left, level=10]
Rule 57    expr -> expr RDIVIDE expr  [precedence=left, level=10]
Rule 58    expr -> expr TIMES expr  [precedence=left, level=10]
Rule 59    expr -> expr MLDIVIDE expr  [precedence=left, level=10]
Rule 60    expr -> expr MRDIVIDE expr  [precedence=left, level=10]
Rule 61    expr -> expr MTIMES expr  [precedence=left, level=10]
Rule 62    expr -> expr MINUS expr  [precedence=left, level=9]
Rule 63    expr -> expr PLUS expr  [precedence=left, level=9]
Rule 64    expr -> expr NE expr  [precedence=left, level=7]
Rule 65    expr -> expr EQ expr  [precedence=left, level=7]
Rule 66    expr -> expr GE expr  [precedence=left, level=7]
Rule 67    expr -> expr GT expr  [precedence=left, level=7]
Rule 68    expr -> expr LE expr  [precedence=left, level=7]
Rule 69    expr -> expr LT expr  [precedence=left, level=7]
Rule 70    expr -> expr AND expr  [precedence=left, level=6]
Rule 71    expr -> expr OR expr  [precedence=left, level=5]
Rule 72    expr -> expr ANDAND expr  [precedence=left, level=4]
Rule 73    expr -> expr OROR expr  [precedence=left, level=3]
Rule 74    expr -> expr COLON expr  [precedence=left, level=8]
Rule 75    expr -> NOT expr  [precedence=left, level=11]
Rule 76    expr -> MINUS expr  [precedence=left, level=9]
Rule 77    expr -> PLUS expr  [precedence=left, level=9]
Rule 78    expr -> AT LPAREN args RPAREN expr
Rule 79    expr -> expr DOT NAME
Rule 80    expr -> expr ELLIPSIS NEWLINE
Rule 81    expr -> LPAREN expr RPAREN
Rule 82    expr -> expr ASSIGN expr  [precedence=left, level=1]
Rule 83    expr -> LSQR matrx_rows matrx_elements RSQR
Rule 84    expr -> LSQR matrx_elements RSQR
Rule 85    expr -> LSQR RSQR
Rule 86    expr -> LSQR matrx_rows RSQR
Rule 87    expr -> LCURL matrx_rows matrx_elements RCURL
Rule 88    expr -> LCURL matrx_elements RCURL
Rule 89    expr -> LCURL RCURL
Rule 90    expr -> LCURL matrx_rows RCURL
Rule 91    expr -> expr LCURL args RCURL
Rule 92    expr -> expr LPAREN args RPAREN
Rule 93    args -> expr
Rule 94    args -> expr COMMA expr  [precedence=left, level=2]
Rule 95    args -> args COMMA expr  [precedence=left, level=2]
Rule 96    matrx_rows -> matrx_elements SEMICOLON
Rule 97    matrx_rows -> matrx_rows matrx_elements SEMICOLON
Rule 98    matrx_elements -> expr
Rule 99    matrx_elements -> matrx_elements COMMA expr  [precedence=left, level=2]
Rule 100   matrx_elements -> matrx_elements expr

Unused terminals:

    ignore_COMMENT

Terminals, with rules where they appear:

AND                  : 70
ANDAND               : 72
ASSIGN               : 82
AT                   : 78
BREAK                : 27 29
CASE                 : 43 44 45 46 47 48
CATCH                : 15
COLON                : 74
COMMA                : 5 94 95 99
COMMAND              : 4
CONTINUE             : 28 30
CTRANSPOSE           : 52
DOT                  : 79
ELLIPSIS             : 80
ELSE                 : 41 42
ELSEIF               : 39 40
END                  : 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 31 32 36
EQ                   : 65
FOR                  : 31 32
FUNCTION             : 35 36
GE                   : 66
GT                   : 67
IF                   : 18 19 20 21 22 23 37 38
LCURL                : 87 88 89 90 91
LDIVIDE              : 56
LE                   : 68
LPAREN               : 78 81 92
LSQR                 : 83 84 85 86
LT                   : 69
MINUS                : 62 76
MLDIVIDE             : 59
MPOWER               : 54
MRDIVIDE             : 60
MTIMES               : 61
NAME                 : 51 79
NE                   : 64
NEWLINE              : 6 8 10 12 12 13 14 15 16 17 19 22 25 29 30 32 34 36 42 80
NOT                  : 75
NUMBER               : 50
OR                   : 71
OROR                 : 73
OTHERWISE            : 10 11 12 13
PLUS                 : 63 77
POWER                : 55
RCURL                : 87 88 89 90 91
RDIVIDE              : 57
RETURN               : 33 34
RPAREN               : 78 81 92
RSQR                 : 83 84 85 86
SEMICOLON            : 7 9 10 11 11 13 18 21 24 27 28 31 33 41 96 97
STRING               : 49
SWITCH               : 43 44 45 46
TIMES                : 58
TRANSPOSE            : 53
TRY                  : 15
WHILE                : 16 17
error                : 
ignore_COMMENT       : 

Nonterminals, with rules where they appear:

args                 : 78 91 92 95
code_block           : 2 3 10 11 12 13 15 15 16 17 31 32 35 36 37 38 39 40 41 42 43 44 45 46 47 48 0
expr                 : 5 6 7 16 18 19 20 33 34 37 39 43 43 44 45 47 52 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 76 77 78 79 80 81 82 82 91 92 93 94 94 95 98 99 100
if_block             : 24 25 26 39 40 41 42
matrx_elements       : 83 84 87 88 96 97 99 100
matrx_rows           : 83 86 87 90 97
statement            : 1 2 3 15 17 18 19 20 21 21 22 22 23 23 31 32 35 36 38 40 44 45 46 46 48
switch_block         : 10 11 12 13 14 47 48


state 0

    (0) S' -> . code_block
    (1) code_block -> . statement
    (2) code_block -> . statement code_block
    (3) code_block -> . code_block statement
    (4) statement -> . COMMAND
    (5) statement -> . expr COMMA
    (6) statement -> . expr NEWLINE
    (7) statement -> . expr SEMICOLON
    (8) statement -> . NEWLINE
    (9) statement -> . SEMICOLON
    (10) statement -> . switch_block OTHERWISE NEWLINE code_block END SEMICOLON
    (11) statement -> . switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
    (12) statement -> . switch_block OTHERWISE NEWLINE code_block END NEWLINE
    (13) statement -> . switch_block OTHERWISE SEMICOLON code_block END NEWLINE
    (14) statement -> . switch_block END NEWLINE
    (15) statement -> . TRY code_block CATCH statement code_block END NEWLINE
    (16) statement -> . WHILE expr code_block END NEWLINE
    (17) statement -> . WHILE statement code_block END NEWLINE
    (18) statement -> . IF expr statement END SEMICOLON
    (19) statement -> . IF expr statement END NEWLINE
    (20) statement -> . IF expr statement END
    (21) statement -> . IF statement statement END SEMICOLON
    (22) statement -> . IF statement statement END NEWLINE
    (23) statement -> . IF statement statement END
    (24) statement -> . if_block END SEMICOLON
    (25) statement -> . if_block END NEWLINE
    (26) statement -> . if_block END
    (27) statement -> . BREAK SEMICOLON
    (28) statement -> . CONTINUE SEMICOLON
    (29) statement -> . BREAK NEWLINE
    (30) statement -> . CONTINUE NEWLINE
    (31) statement -> . FOR statement code_block END SEMICOLON
    (32) statement -> . FOR statement code_block END NEWLINE
    (33) statement -> . RETURN expr SEMICOLON
    (34) statement -> . RETURN expr NEWLINE
    (35) statement -> . FUNCTION statement code_block
    (36) statement -> . FUNCTION statement code_block END NEWLINE
    (49) expr -> . STRING
    (50) expr -> . NUMBER
    (51) expr -> . NAME
    (52) expr -> . expr CTRANSPOSE
    (53) expr -> . expr TRANSPOSE
    (54) expr -> . expr MPOWER expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr LDIVIDE expr
    (57) expr -> . expr RDIVIDE expr
    (58) expr -> . expr TIMES expr
    (59) expr -> . expr MLDIVIDE expr
    (60) expr -> . expr MRDIVIDE expr
    (61) expr -> . expr MTIMES expr
    (62) expr -> . expr MINUS expr
    (63) expr -> . expr PLUS expr
    (64) expr -> . expr NE expr
    (65) expr -> . expr EQ expr
    (66) expr -> . expr GE expr
    (67) expr -> . expr GT expr
    (68) expr -> . expr LE expr
    (69) expr -> . expr LT expr
    (70) expr -> . expr AND expr
    (71) expr -> . expr OR expr
    (72) expr -> . expr ANDAND expr
    (73) expr -> . expr OROR expr
    (74) expr -> . expr COLON expr
    (75) expr -> . NOT expr
    (76) expr -> . MINUS expr
    (77) expr -> . PLUS expr
    (78) expr -> . AT LPAREN args RPAREN expr
    (79) expr -> . expr DOT NAME
    (80) expr -> . expr ELLIPSIS NEWLINE
    (81) expr -> . LPAREN expr RPAREN
    (82) expr -> . expr ASSIGN expr
    (83) expr -> . LSQR matrx_rows matrx_elements RSQR
    (84) expr -> . LSQR matrx_elements RSQR
    (85) expr -> . LSQR RSQR
    (86) expr -> . LSQR matrx_rows RSQR
    (87) expr -> . LCURL matrx_rows matrx_elements RCURL
    (88) expr -> . LCURL matrx_elements RCURL
    (89) expr -> . LCURL RCURL
    (90) expr -> . LCURL matrx_rows RCURL
    (91) expr -> . expr LCURL args RCURL
    (92) expr -> . expr LPAREN args RPAREN
    (43) switch_block -> . SWITCH expr CASE expr code_block
    (44) switch_block -> . SWITCH expr CASE statement code_block
    (45) switch_block -> . SWITCH statement CASE expr code_block
    (46) switch_block -> . SWITCH statement CASE statement code_block
    (47) switch_block -> . switch_block CASE expr code_block
    (48) switch_block -> . switch_block CASE statement code_block
    (37) if_block -> . IF expr code_block
    (38) if_block -> . IF statement code_block
    (39) if_block -> . if_block ELSEIF expr code_block
    (40) if_block -> . if_block ELSEIF statement code_block
    (41) if_block -> . if_block ELSE SEMICOLON code_block
    (42) if_block -> . if_block ELSE NEWLINE code_block
    COMMAND         shift and go to state 3
    NEWLINE         shift and go to state 5
    SEMICOLON       shift and go to state 6
    TRY             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    FUNCTION        shift and go to state 16
    STRING          shift and go to state 17
    NUMBER          shift and go to state 18
    NAME            shift and go to state 19
    NOT             shift and go to state 22
    MINUS           shift and go to state 20
    PLUS            shift and go to state 21
    AT              shift and go to state 23
    LPAREN          shift and go to state 24
    LSQR            shift and go to state 25
    LCURL           shift and go to state 26
    SWITCH          shift and go to state 27

    code_block                     shift and go to state 1
    statement                      shift and go to state 2
    expr                           shift and go to state 4
    switch_block                   shift and go to state 7
    if_block                       shift and go to state 11

state 1

    (0) S' -> code_block .
    (3) code_block -> code_block . statement
    (4) statement -> . COMMAND
    (5) statement -> . expr COMMA
    (6) statement -> . expr NEWLINE
    (7) statement -> . expr SEMICOLON
    (8) statement -> . NEWLINE
    (9) statement -> . SEMICOLON
    (10) statement -> . switch_block OTHERWISE NEWLINE code_block END SEMICOLON
    (11) statement -> . switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
    (12) statement -> . switch_block OTHERWISE NEWLINE code_block END NEWLINE
    (13) statement -> . switch_block OTHERWISE SEMICOLON code_block END NEWLINE
    (14) statement -> . switch_block END NEWLINE
    (15) statement -> . TRY code_block CATCH statement code_block END NEWLINE
    (16) statement -> . WHILE expr code_block END NEWLINE
    (17) statement -> . WHILE statement code_block END NEWLINE
    (18) statement -> . IF expr statement END SEMICOLON
    (19) statement -> . IF expr statement END NEWLINE
    (20) statement -> . IF expr statement END
    (21) statement -> . IF statement statement END SEMICOLON
    (22) statement -> . IF statement statement END NEWLINE
    (23) statement -> . IF statement statement END
    (24) statement -> . if_block END SEMICOLON
    (25) statement -> . if_block END NEWLINE
    (26) statement -> . if_block END
    (27) statement -> . BREAK SEMICOLON
    (28) statement -> . CONTINUE SEMICOLON
    (29) statement -> . BREAK NEWLINE
    (30) statement -> . CONTINUE NEWLINE
    (31) statement -> . FOR statement code_block END SEMICOLON
    (32) statement -> . FOR statement code_block END NEWLINE
    (33) statement -> . RETURN expr SEMICOLON
    (34) statement -> . RETURN expr NEWLINE
    (35) statement -> . FUNCTION statement code_block
    (36) statement -> . FUNCTION statement code_block END NEWLINE
    (49) expr -> . STRING
    (50) expr -> . NUMBER
    (51) expr -> . NAME
    (52) expr -> . expr CTRANSPOSE
    (53) expr -> . expr TRANSPOSE
    (54) expr -> . expr MPOWER expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr LDIVIDE expr
    (57) expr -> . expr RDIVIDE expr
    (58) expr -> . expr TIMES expr
    (59) expr -> . expr MLDIVIDE expr
    (60) expr -> . expr MRDIVIDE expr
    (61) expr -> . expr MTIMES expr
    (62) expr -> . expr MINUS expr
    (63) expr -> . expr PLUS expr
    (64) expr -> . expr NE expr
    (65) expr -> . expr EQ expr
    (66) expr -> . expr GE expr
    (67) expr -> . expr GT expr
    (68) expr -> . expr LE expr
    (69) expr -> . expr LT expr
    (70) expr -> . expr AND expr
    (71) expr -> . expr OR expr
    (72) expr -> . expr ANDAND expr
    (73) expr -> . expr OROR expr
    (74) expr -> . expr COLON expr
    (75) expr -> . NOT expr
    (76) expr -> . MINUS expr
    (77) expr -> . PLUS expr
    (78) expr -> . AT LPAREN args RPAREN expr
    (79) expr -> . expr DOT NAME
    (80) expr -> . expr ELLIPSIS NEWLINE
    (81) expr -> . LPAREN expr RPAREN
    (82) expr -> . expr ASSIGN expr
    (83) expr -> . LSQR matrx_rows matrx_elements RSQR
    (84) expr -> . LSQR matrx_elements RSQR
    (85) expr -> . LSQR RSQR
    (86) expr -> . LSQR matrx_rows RSQR
    (87) expr -> . LCURL matrx_rows matrx_elements RCURL
    (88) expr -> . LCURL matrx_elements RCURL
    (89) expr -> . LCURL RCURL
    (90) expr -> . LCURL matrx_rows RCURL
    (91) expr -> . expr LCURL args RCURL
    (92) expr -> . expr LPAREN args RPAREN
    (43) switch_block -> . SWITCH expr CASE expr code_block
    (44) switch_block -> . SWITCH expr CASE statement code_block
    (45) switch_block -> . SWITCH statement CASE expr code_block
    (46) switch_block -> . SWITCH statement CASE statement code_block
    (47) switch_block -> . switch_block CASE expr code_block
    (48) switch_block -> . switch_block CASE statement code_block
    (37) if_block -> . IF expr code_block
    (38) if_block -> . IF statement code_block
    (39) if_block -> . if_block ELSEIF expr code_block
    (40) if_block -> . if_block ELSEIF statement code_block
    (41) if_block -> . if_block ELSE SEMICOLON code_block
    (42) if_block -> . if_block ELSE NEWLINE code_block
    COMMAND         shift and go to state 3
    NEWLINE         shift and go to state 5
    SEMICOLON       shift and go to state 6
    TRY             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    FUNCTION        shift and go to state 16
    STRING          shift and go to state 17
    NUMBER          shift and go to state 18
    NAME            shift and go to state 19
    NOT             shift and go to state 22
    MINUS           shift and go to state 20
    PLUS            shift and go to state 21
    AT              shift and go to state 23
    LPAREN          shift and go to state 24
    LSQR            shift and go to state 25
    LCURL           shift and go to state 26
    SWITCH          shift and go to state 27

    statement                      shift and go to state 28
    expr                           shift and go to state 4
    switch_block                   shift and go to state 7
    if_block                       shift and go to state 11

state 2

    (1) code_block -> statement .
    (2) code_block -> statement . code_block
    (1) code_block -> . statement
    (2) code_block -> . statement code_block
    (3) code_block -> . code_block statement
    (4) statement -> . COMMAND
    (5) statement -> . expr COMMA
    (6) statement -> . expr NEWLINE
    (7) statement -> . expr SEMICOLON
    (8) statement -> . NEWLINE
    (9) statement -> . SEMICOLON
    (10) statement -> . switch_block OTHERWISE NEWLINE code_block END SEMICOLON
    (11) statement -> . switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
    (12) statement -> . switch_block OTHERWISE NEWLINE code_block END NEWLINE
    (13) statement -> . switch_block OTHERWISE SEMICOLON code_block END NEWLINE
    (14) statement -> . switch_block END NEWLINE
    (15) statement -> . TRY code_block CATCH statement code_block END NEWLINE
    (16) statement -> . WHILE expr code_block END NEWLINE
    (17) statement -> . WHILE statement code_block END NEWLINE
    (18) statement -> . IF expr statement END SEMICOLON
    (19) statement -> . IF expr statement END NEWLINE
    (20) statement -> . IF expr statement END
    (21) statement -> . IF statement statement END SEMICOLON
    (22) statement -> . IF statement statement END NEWLINE
    (23) statement -> . IF statement statement END
    (24) statement -> . if_block END SEMICOLON
    (25) statement -> . if_block END NEWLINE
    (26) statement -> . if_block END
    (27) statement -> . BREAK SEMICOLON
    (28) statement -> . CONTINUE SEMICOLON
    (29) statement -> . BREAK NEWLINE
    (30) statement -> . CONTINUE NEWLINE
    (31) statement -> . FOR statement code_block END SEMICOLON
    (32) statement -> . FOR statement code_block END NEWLINE
    (33) statement -> . RETURN expr SEMICOLON
    (34) statement -> . RETURN expr NEWLINE
    (35) statement -> . FUNCTION statement code_block
    (36) statement -> . FUNCTION statement code_block END NEWLINE
    (49) expr -> . STRING
    (50) expr -> . NUMBER
    (51) expr -> . NAME
    (52) expr -> . expr CTRANSPOSE
    (53) expr -> . expr TRANSPOSE
    (54) expr -> . expr MPOWER expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr LDIVIDE expr
    (57) expr -> . expr RDIVIDE expr
    (58) expr -> . expr TIMES expr
    (59) expr -> . expr MLDIVIDE expr
    (60) expr -> . expr MRDIVIDE expr
    (61) expr -> . expr MTIMES expr
    (62) expr -> . expr MINUS expr
    (63) expr -> . expr PLUS expr
    (64) expr -> . expr NE expr
    (65) expr -> . expr EQ expr
    (66) expr -> . expr GE expr
    (67) expr -> . expr GT expr
    (68) expr -> . expr LE expr
    (69) expr -> . expr LT expr
    (70) expr -> . expr AND expr
    (71) expr -> . expr OR expr
    (72) expr -> . expr ANDAND expr
    (73) expr -> . expr OROR expr
    (74) expr -> . expr COLON expr
    (75) expr -> . NOT expr
    (76) expr -> . MINUS expr
    (77) expr -> . PLUS expr
    (78) expr -> . AT LPAREN args RPAREN expr
    (79) expr -> . expr DOT NAME
    (80) expr -> . expr ELLIPSIS NEWLINE
    (81) expr -> . LPAREN expr RPAREN
    (82) expr -> . expr ASSIGN expr
    (83) expr -> . LSQR matrx_rows matrx_elements RSQR
    (84) expr -> . LSQR matrx_elements RSQR
    (85) expr -> . LSQR RSQR
    (86) expr -> . LSQR matrx_rows RSQR
    (87) expr -> . LCURL matrx_rows matrx_elements RCURL
    (88) expr -> . LCURL matrx_elements RCURL
    (89) expr -> . LCURL RCURL
    (90) expr -> . LCURL matrx_rows RCURL
    (91) expr -> . expr LCURL args RCURL
    (92) expr -> . expr LPAREN args RPAREN
    (43) switch_block -> . SWITCH expr CASE expr code_block
    (44) switch_block -> . SWITCH expr CASE statement code_block
    (45) switch_block -> . SWITCH statement CASE expr code_block
    (46) switch_block -> . SWITCH statement CASE statement code_block
    (47) switch_block -> . switch_block CASE expr code_block
    (48) switch_block -> . switch_block CASE statement code_block
    (37) if_block -> . IF expr code_block
    (38) if_block -> . IF statement code_block
    (39) if_block -> . if_block ELSEIF expr code_block
    (40) if_block -> . if_block ELSEIF statement code_block
    (41) if_block -> . if_block ELSE SEMICOLON code_block
    (42) if_block -> . if_block ELSE NEWLINE code_block
  ! shift/reduce conflict for COMMAND resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for TRY resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LSQR resolved as shift
  ! shift/reduce conflict for LCURL resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
    $end            reduce using rule 1 (code_block -> statement .)
    CATCH           reduce using rule 1 (code_block -> statement .)
    END             reduce using rule 1 (code_block -> statement .)
    CASE            reduce using rule 1 (code_block -> statement .)
    ELSEIF          reduce using rule 1 (code_block -> statement .)
    ELSE            reduce using rule 1 (code_block -> statement .)
    OTHERWISE       reduce using rule 1 (code_block -> statement .)
    COMMAND         shift and go to state 3
    NEWLINE         shift and go to state 5
    SEMICOLON       shift and go to state 6
    TRY             shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    FUNCTION        shift and go to state 16
    STRING          shift and go to state 17
    NUMBER          shift and go to state 18
    NAME            shift and go to state 19
    NOT             shift and go to state 22
    MINUS           shift and go to state 20
    PLUS            shift and go to state 21
    AT              shift and go to state 23
    LPAREN          shift and go to state 24
    LSQR            shift and go to state 25
    LCURL           shift and go to state 26
    SWITCH          shift and go to state 27

    statement                      shift and go to state 2
    code_block                     shift and go to state 29
    expr                           shift and go to state 4
    switch_block                   shift and go to state 7
    if_block                       shift and go to state 11

state 3

    (4) statement -> COMMAND .
    COMMAND         reduce using rule 4 (statement -> COMMAND .)
    NEWLINE         reduce using rule 4 (statement -> COMMAND .)
    SEMICOLON       reduce using rule 4 (statement -> COMMAND .)
    TRY             reduce using rule 4 (statement -> COMMAND .)
    WHILE           reduce using rule 4 (statement -> COMMAND .)
    IF              reduce using rule 4 (statement -> COMMAND .)
    BREAK           reduce using rule 4 (statement -> COMMAND .)
    CONTINUE        reduce using rule 4 (statement -> COMMAND .)
    FOR             reduce using rule 4 (statement -> COMMAND .)
    RETURN          reduce using rule 4 (statement -> COMMAND .)
    FUNCTION        reduce using rule 4 (statement -> COMMAND .)
    STRING          reduce using rule 4 (statement -> COMMAND .)
    NUMBER          reduce using rule 4 (statement -> COMMAND .)
    NAME            reduce using rule 4 (statement -> COMMAND .)
    NOT             reduce using rule 4 (statement -> COMMAND .)
    MINUS           reduce using rule 4 (statement -> COMMAND .)
    PLUS            reduce using rule 4 (statement -> COMMAND .)
    AT              reduce using rule 4 (statement -> COMMAND .)
    LPAREN          reduce using rule 4 (statement -> COMMAND .)
    LSQR            reduce using rule 4 (statement -> COMMAND .)
    LCURL           reduce using rule 4 (statement -> COMMAND .)
    SWITCH          reduce using rule 4 (statement -> COMMAND .)
    $end            reduce using rule 4 (statement -> COMMAND .)
    CATCH           reduce using rule 4 (statement -> COMMAND .)
    END             reduce using rule 4 (statement -> COMMAND .)
    CASE            reduce using rule 4 (statement -> COMMAND .)
    ELSEIF          reduce using rule 4 (statement -> COMMAND .)
    ELSE            reduce using rule 4 (statement -> COMMAND .)
    OTHERWISE       reduce using rule 4 (statement -> COMMAND .)


state 4

    (5) statement -> expr . COMMA
    (6) statement -> expr . NEWLINE
    (7) statement -> expr . SEMICOLON
    (52) expr -> expr . CTRANSPOSE
    (53) expr -> expr . TRANSPOSE
    (54) expr -> expr . MPOWER expr
    (55) expr -> expr . POWER expr
    (56) expr -> expr . LDIVIDE expr
    (57) expr -> expr . RDIVIDE expr
    (58) expr -> expr . TIMES expr
    (59) expr -> expr . MLDIVIDE expr
    (60) expr -> expr . MRDIVIDE expr
    (61) expr -> expr . MTIMES expr
    (62) expr -> expr . MINUS expr
    (63) expr -> expr . PLUS expr
    (64) expr -> expr . NE expr
    (65) expr -> expr . EQ expr
    (66) expr -> expr . GE expr
    (67) expr -> expr . GT expr
    (68) expr -> expr . LE expr
    (69) expr -> expr . LT expr
    (70) expr -> expr . AND expr
    (71) expr -> expr . OR expr
    (72) expr -> expr . ANDAND expr
    (73) expr -> expr . OROR expr
    (74) expr -> expr . COLON expr
    (79) expr -> expr . DOT NAME
    (80) expr -> expr . ELLIPSIS NEWLINE
    (82) expr -> expr . ASSIGN expr
    (91) expr -> expr . LCURL args RCURL
    (92) expr -> expr . LPAREN args RPAREN
    COMMA           shift and go to state 30
    NEWLINE         shift and go to state 31
    SEMICOLON       shift and go to state 32
    CTRANSPOSE      shift and go to state 33
    TRANSPOSE       shift and go to state 34
    MPOWER          shift and go to state 35
    POWER           shift and go to state 36
    LDIVIDE         shift and go to state 37
    RDIVIDE         shift and go to state 38
    TIMES           shift and go to state 39
    MLDIVIDE        shift and go to state 40
    MRDIVIDE        shift and go to state 41
    MTIMES          shift and go to state 42
    MINUS           shift and go to state 43
    PLUS            shift and go to state 44
    NE              shift and go to state 45
    EQ              shift and go to state 46
    GE              shift and go to state 47
    GT              shift and go to state 48
    LE              shift and go to state 49
    LT              shift and go to state 50
    AND             shift and go to state 51
    OR              shift and go to state 52
    ANDAND          shift and go to state 53
    OROR            shift and go to state 54
    COLON           shift and go to state 55
    DOT             shift and go to state 56
    ELLIPSIS        shift and go to state 57
    ASSIGN          shift and go to state 58
    LCURL           shift and go to state 59
    LPAREN          shift and go to state 60


state 5

    (8) statement -> NEWLINE .
    COMMAND         reduce using rule 8 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 8 (statement -> NEWLINE .)
    SEMICOLON       reduce using rule 8 (statement -> NEWLINE .)
    TRY             reduce using rule 8 (statement -> NEWLINE .)
    WHILE           reduce using rule 8 (statement -> NEWLINE .)
    IF              reduce using rule 8 (statement -> NEWLINE .)
    BREAK           reduce using rule 8 (statement -> NEWLINE .)
    CONTINUE        reduce using rule 8 (statement -> NEWLINE .)
    FOR             reduce using rule 8 (statement -> NEWLINE .)
    RETURN          reduce using rule 8 (statement -> NEWLINE .)
    FUNCTION        reduce using rule 8 (statement -> NEWLINE .)
    STRING          reduce using rule 8 (statement -> NEWLINE .)
    NUMBER          reduce using rule 8 (statement -> NEWLINE .)
    NAME            reduce using rule 8 (statement -> NEWLINE .)
    NOT             reduce using rule 8 (statement -> NEWLINE .)
    MINUS           reduce using rule 8 (statement -> NEWLINE .)
    PLUS            reduce using rule 8 (statement -> NEWLINE .)
    AT              reduce using rule 8 (statement -> NEWLINE .)
    LPAREN          reduce using rule 8 (statement -> NEWLINE .)
    LSQR            reduce using rule 8 (statement -> NEWLINE .)
    LCURL           reduce using rule 8 (statement -> NEWLINE .)
    SWITCH          reduce using rule 8 (statement -> NEWLINE .)
    $end            reduce using rule 8 (statement -> NEWLINE .)
    CATCH           reduce using rule 8 (statement -> NEWLINE .)
    END             reduce using rule 8 (statement -> NEWLINE .)
    CASE            reduce using rule 8 (statement -> NEWLINE .)
    ELSEIF          reduce using rule 8 (statement -> NEWLINE .)
    ELSE            reduce using rule 8 (statement -> NEWLINE .)
    OTHERWISE       reduce using rule 8 (statement -> NEWLINE .)


state 6
